[package]
name = "sgen"
version = "0.0.1"
authors = ["Henrik Rydgård"]
edition = "2021"

[dependencies]
# IMPORTANT: Do not switch markdown to the suggested version!
markdown = "1.0.0-alpha.16"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "5.0"
env_logger = "0.10"
axum = "0.7.3"
axum-extra = "0.9.1"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
structopt = "0.3.26"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.0"
notify = "6.1"
natord = "1.0"
minify-js = "0.6"
chrono = { version = "0.4", features = ["serde"] }
