[package]
name = "ppsspp-site-generator"
version = "0.0.1"
authors = ["Henrik Rydgård"]
edition = "2021"

[dependencies]
# IMPORTANT: Do not switch markdown to the suggested version!
markdown = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "6.3.2"
env_logger = "0.11"
axum = "0.8.1"
axum-extra = "0.12.1"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.0"
notify = "8.2.0"
natord = "1.0"
minify-js = "0.6"
chrono = { version = "0.4" }
clap = { version = "4.5.41", features = ["derive"] }
